syntax = "proto3";

package pb;

option go_package = "simplebank/pb";

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/field_behavior.proto";
import "pagination.proto";
import "transaction.proto";

message ListTransactionsRequest {
  optional int64 user_id = 1 [(google.api.field_behavior) = OPTIONAL];

  string cursor = 2;

  int64 limit = 3;
}

message ListTransactionsResponse {
  Pagination pagination = 1;

  repeated Transaction data = 2;
}