syntax = "proto3";

package pb;

option go_package = "simplebank/pb/transfers";

import "google/protobuf/timestamp.proto";

message Entry {
  int64 id = 1;

  int64 account_id = 2;

  int64 amount = 3;

  google.protobuf.Timestamp created_at = 4;
}